@startuml

skinparam classAttributeIconSize 0

abstract class Medias{
    #titre : string
}

class Livre{
    -isbn : string
    -auteur : string
    -nombrePages : int
    -duréeEmprunt : int
    +informationsLivre()
}

class BluRay{
    -réalisateur : string
    -durée : string
    -annéeSortie : string
    -duréeEmprunt : int
    +informationsBluRay()
}

class Magazine{
    -numéro : string
    -datePublication : dateTime
    -duréeEmprunt : int
    +informationsMagazine()
}

class Adherents{
    -numAdherent : string
    -prenom : string
    -nom : string
    -dateAdhesion : string
    +genererNumero()
    +renouvelerAdhesion()
    +EtatAdhesion()
    +InformationsAdherent()
}

class Emprunts{
    -dateEmprunt : dateTime
    -dateRetourEstimée : dateTime
    -dateRetour : dateTime
    +retourEmprunt()
    +AlerteEmprunt()
    +respectDuréeEmprunt()
    +informationsEmprunt()
}

Medias <-- Livre : "Hérite de"
Medias <-- BluRay : "Hérite de"
Medias <-- Magazine : "Hérite de"
Medias "1..1"<-- "1..*      " Emprunts : "Appartient"
Adherents "1..1 " <-- "1..* " Emprunts : "Possède"

@enduml